--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ skip_glob = ["examples/*"]
 [[tool.mypy.overrides]]
 module = "yaml"
 ignore_missing_imports = true
+
+[tool.jupytext]
+formats = "ipynb,py:percent"
